[tool.poetry]
name = "rotator_lambda"
version = "1.0.0"
description = ""
authors = ["Cloud Platform Services <cfs@godaddy.com>"]
packages = [
    { include = "rotator_lambda", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
boto3 = "^1.35.78"
crhelper = "==2.0.4"
botocore = "^1.34.126"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry>=1.1.5"]
build-backend = "poetry.masonry.api"
